--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <a href="#">Team</a>
                 <a href="#">Pricing</a>
                 <a href="#">FAQ</a>
-                <a href="#">More Links</a>
+                <a href="services.html">More Links</a>
                 </div>               
             </div>
             <a class="Portfolio">Portfolio</a>
-            <a class="Services">Services</a>
+            <a class="services">Services</a>
             <!-- <a class="Testemonials">Testemonials</a> -->
             <!-- <a class="Blog">Blog</a> -->
             <a class="Contact">Contact</a>
@@ -297,6 +297,7 @@
             </div>
         </div>
     </Setion>
+    <!-- cards -->
 
         <!-- <div class="jas">
             <p id="affichagemail"></p>
@@ -309,6 +310,8 @@
 
         </div> -->
 
+                      
+                
     </SECtion>
 </Body>
 </html>
